[gd_scene load_steps=8 format=2]

[ext_resource path="res://Math Mobs/Mutipulcation man.png" type="Texture" id=1]
[ext_resource path="res://Math Mobs/Mshootg.anim" type="Animation" id=2]
[ext_resource path="res://Math Mobs/Mwalk.anim" type="Animation" id=3]
[ext_resource path="res://Math Mobs/MultMan.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=3]
radius = 6.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 13 )

[node name="MultMan" type="KinematicBody2D"]
scale = Vector2( 3, 3 )
collision_layer = 4
collision_mask = 0
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 3
vframes = 2
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 3.0
anims/Mshootg = ExtResource( 2 )
anims/Mwalk = ExtResource( 3 )
anims/RESET = SubResource( 2 )

[node name="Reload" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -3 )
shape = SubResource( 4 )

[node name="Switch" type="Timer" parent="."]

[connection signal="timeout" from="Reload" to="." method="_on_Reload_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Switch" to="." method="_on_Switch_timeout"]
